@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-02T08:29:00Z",
+  "timestamp" : "2022-09-03T02:32:58Z",
   "count_outdated" : 450,
   "uniques_outdated" : 285,
-  "count" : 489,
+  "count" : 490,
   "uniques" : 311,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
