@@ -1,3 +1,11 @@
+2022-09-03T02:32:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2982869291
+* notice: last 14d: unq all: 12 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 285 450 / 311 489
+* notice: next accum: outdated-unq outdated-all / unq all: 285 450 / 311 490
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-02]
+
 2022-09-02T08:29:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977677958
 * notice: last 14d: unq all: 12 39
